--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "playwright": "^1.46.0"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
+    "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
     "@types/jsdom": "^21.1.7",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.2.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
