--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "target": "ES6",                          
-      "module": "esnext",                     
+      "module": "commonjs",                     
       "strict": true,                           
       "esModuleInterop": true,                 
       "skipLibCheck": true,                     
@@ -14,7 +14,7 @@
       "lib": ["ES6"],                           
       "sourceMap": true                         
     },
-    "include": ["routes/**/*.ts"],                 
+    "include": ["**/*.ts"],
     "exclude": ["node_modules", "dist"]        
   } 
   
