--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
     "@types/jsdom": "^21.1.7",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.2.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
